--- a/vty.cabal
+++ b/vty.cabal
@@ -67,7 +67,7 @@ library
                        transformers >= 0.3.0.0,
                        text >= 0.11.3,
                        utf8-string >= 0.3 && < 1.1,
-                       vector >= 0.7,
+                       vector >= 0.11,
                        unix-compat >= 0.4.1.4 && < 0.5
 
   exposed-modules:     Graphics.Vty
@@ -115,6 +115,7 @@ library
 
     other-modules:     Graphics.Vty.Input.Terminfo.ANSIVT
                        Graphics.Vty.Inline.Unsafe.Posix
+                       Graphics.Vty.Output.Terminfo.PosixIOExtras
 
     build-depends:     unix,
                        terminfo >= 0.3 && < 0.5
@@ -170,6 +171,7 @@ test-suite attribute-ops
   test-module:         VerifyAttributeOps
   build-depends:       vty,
                        Cabal >= 1.20,
+                       cabal-test-quickcheck >= 0.1.6,
                        QuickCheck >= 2.7,
                        random >= 1.0 && < 1.2,
                        base >= 4 && < 5,
@@ -179,7 +181,7 @@ test-suite attribute-ops
                        mtl >= 1.1.1.0 && < 2.3,
                        text >= 0.11.3,
                        utf8-string >= 0.3 && < 1.1,
-                       vector >= 0.7
+                       vector >= 0.11
 
   if flag(curses) && !os(windows)
     build-depends:     unix,
@@ -208,6 +210,7 @@ test-suite using-mock-terminal
 
   build-depends:       vty,
                        Cabal >= 1.20,
+                       cabal-test-quickcheck >= 0.1.6,
                        QuickCheck >= 2.7,
                        random >= 1.0 && < 1.2,
                        base >= 4 && < 5,
@@ -217,7 +220,7 @@ test-suite using-mock-terminal
                        mtl >= 1.1.1.0 && < 2.3,
                        text >= 0.11.3,
                        utf8-string >= 0.3 && < 1.1,
-                       vector >= 0.7
+                       vector >= 0.11
 
   if flag(curses) && !os(windows)
     build-depends:     unix,
@@ -246,6 +249,7 @@ test-suite terminal
 
   build-depends:       vty,
                        Cabal >= 1.20,
+                       cabal-test-quickcheck >= 0.1.6,
                        QuickCheck >= 2.7,
                        random >= 1.0 && < 1.2,
                        base >= 4 && < 5,
@@ -256,7 +260,7 @@ test-suite terminal
                        mtl >= 1.1.1.0 && < 2.3,
                        text >= 0.11.3,
                        utf8-string >= 0.3 && < 1.1,
-                       vector >= 0.7
+                       vector >= 0.11
 
   if flag(curses) && !os(windows)
     build-depends:     unix,
@@ -286,6 +290,7 @@ test-suite display-attributes
 
   build-depends:       vty,
                        Cabal >= 1.20,
+                       cabal-test-quickcheck >= 0.1.6,
                        QuickCheck >= 2.7,
                        random >= 1.0 && < 1.2,
                        base >= 4 && < 5,
@@ -295,7 +300,7 @@ test-suite display-attributes
                        mtl >= 1.1.1.0 && < 2.3,
                        text >= 0.11.3,
                        utf8-string >= 0.3 && < 1.1,
-                       vector >= 0.7
+                       vector >= 0.11
 
   if flag(curses) && !os(windows)
     build-depends:     unix,
@@ -318,6 +323,7 @@ test-suite empty-image-props
 
   build-depends:       vty,
                        Cabal >= 1.20,
+                       cabal-test-quickcheck >= 0.1.6,
                        QuickCheck >= 2.7,
                        random >= 1.0 && < 1.2,
                        base >= 4 && < 5,
@@ -327,7 +333,7 @@ test-suite empty-image-props
                        mtl >= 1.1.1.0 && < 2.3,
                        text >= 0.11.3,
                        utf8-string >= 0.3 && < 1.1,
-                       vector >= 0.7
+                       vector >= 0.11
 
   if flag(curses) && !os(windows)
     build-depends:     unix,
@@ -351,6 +357,7 @@ test-suite eval-terminfo-caps
 
   build-depends:       vty,
                        Cabal >= 1.20,
+                       cabal-test-quickcheck >= 0.1.6,
                        QuickCheck >= 2.7,
                        random >= 1.0 && < 1.2,
                        base >= 4 && < 5,
@@ -361,7 +368,7 @@ test-suite eval-terminfo-caps
                        mtl >= 1.1.1.0 && < 2.3,
                        text >= 0.11.3,
                        utf8-string >= 0.3 && < 1.1,
-                       vector >= 0.7
+                       vector >= 0.11
 
   if flag(curses) && !os(windows)
     build-depends:     unix,
@@ -387,6 +394,7 @@ test-suite image-ops
 
   build-depends:       vty,
                        Cabal >= 1.20,
+                       cabal-test-quickcheck >= 0.1.6,
                        QuickCheck >= 2.7,
                        random >= 1.0 && < 1.2,
                        base >= 4 && < 5,
@@ -396,7 +404,7 @@ test-suite image-ops
                        mtl >= 1.1.1.0 && < 2.3,
                        text >= 0.11.3,
                        utf8-string >= 0.3 && < 1.1,
-                       vector >= 0.7
+                       vector >= 0.11
 
   if flag(curses) && !os(windows)
     build-depends:     unix,
@@ -421,6 +429,7 @@ test-suite image-trans
 
   build-depends:       vty,
                        Cabal >= 1.20,
+                       cabal-test-quickcheck >= 0.1.6,
                        QuickCheck >= 2.7,
                        random >= 1.0 && < 1.2,
                        base >= 4 && < 5,
@@ -430,7 +439,7 @@ test-suite image-trans
                        mtl >= 1.1.1.0 && < 2.3,
                        text >= 0.11.3,
                        utf8-string >= 0.3 && < 1.1,
-                       vector >= 0.7
+                       vector >= 0.11
 
   if flag(curses) && !os(windows)
     build-depends:     unix,
@@ -454,6 +463,7 @@ test-suite inline
 
   build-depends:       vty,
                        Cabal >= 1.20,
+                       cabal-test-quickcheck >= 0.1.6,
                        QuickCheck >= 2.7,
                        random >= 1.0 && < 1.2,
                        base >= 4 && < 5,
@@ -463,7 +473,7 @@ test-suite inline
                        mtl >= 1.1.1.0 && < 2.3,
                        text >= 0.11.3,
                        utf8-string >= 0.3 && < 1.1,
-                       vector >= 0.7
+                       vector >= 0.11
 
   if flag(curses) && !os(windows)
     build-depends:     unix,
@@ -489,6 +499,7 @@ test-suite parse-terminfo-caps
 
   build-depends:       vty,
                        Cabal >= 1.20,
+                       cabal-test-quickcheck >= 0.1.6,
                        QuickCheck >= 2.7,
                        random >= 1.0 && < 1.2,
                        base >= 4 && < 5,
@@ -498,7 +509,7 @@ test-suite parse-terminfo-caps
                        mtl >= 1.1.1.0 && < 2.3,
                        text >= 0.11.3,
                        utf8-string >= 0.3 && < 1.1,
-                       vector >= 0.7
+                       vector >= 0.11
 
   if flag(curses) && !os(windows)
     build-depends:     unix,
@@ -527,6 +538,7 @@ test-suite simple-span-generation
 
   build-depends:       vty,
                        Cabal >= 1.20,
+                       cabal-test-quickcheck >= 0.1.6,
                        QuickCheck >= 2.7,
                        random >= 1.0 && < 1.2,
                        base >= 4 && < 5,
@@ -536,7 +548,7 @@ test-suite simple-span-generation
                        mtl >= 1.1.1.0 && < 2.3,
                        text >= 0.11.3,
                        utf8-string >= 0.3 && < 1.1,
-                       vector >= 0.7
+                       vector >= 0.11
 
   if flag(curses) && !os(windows)
     build-depends:     unix,
@@ -565,6 +577,7 @@ test-suite crop-span-generation
 
   build-depends:       vty,
                        Cabal >= 1.20,
+                       cabal-test-quickcheck >= 0.1.6,
                        QuickCheck >= 2.7,
                        random >= 1.0 && < 1.2,
                        base >= 4 && < 5,
@@ -574,7 +587,7 @@ test-suite crop-span-generation
                        mtl >= 1.1.1.0 && < 2.3,
                        text >= 0.11.3,
                        utf8-string >= 0.3 && < 1.1,
-                       vector >= 0.7
+                       vector >= 0.11
 
   if flag(curses) && !os(windows)
     build-depends:     unix,
@@ -603,6 +616,7 @@ test-suite layers-span-generation
 
   build-depends:       vty,
                        Cabal >= 1.20,
+                       cabal-test-quickcheck >= 0.1.6,
                        QuickCheck >= 2.7,
                        random >= 1.0 && < 1.2,
                        base >= 4 && < 5,
@@ -612,7 +626,7 @@ test-suite layers-span-generation
                        mtl >= 1.1.1.0 && < 2.3,
                        text >= 0.11.3,
                        utf8-string >= 0.3 && < 1.1,
-                       vector >= 0.7
+                       vector >= 0.11
 
   if flag(curses) && !os(windows)
     build-depends:     unix,
@@ -635,6 +649,7 @@ test-suite utf8-width
 
   build-depends:       vty,
                        Cabal >= 1.20,
+                       cabal-test-quickcheck >= 0.1.6,
                        QuickCheck >= 2.7,
                        random >= 1.0 && < 1.2,
                        base >= 4 && < 5,
@@ -644,7 +659,7 @@ test-suite utf8-width
                        mtl >= 1.1.1.0 && < 2.3,
                        text >= 0.11.3,
                        utf8-string >= 0.3 && < 1.1,
-                       vector >= 0.7
+                       vector >= 0.11
 
   if flag(curses) && !os(windows)
     build-depends:     unix,
@@ -666,6 +681,7 @@ test-suite using-mock-input
 
   build-depends:       vty,
                        Cabal >= 1.20,
+                       cabal-test-quickcheck >= 0.1.6,
                        data-default >= 0.5.3,
                        QuickCheck >= 2.7,
                        smallcheck == 1.*,
@@ -682,7 +698,7 @@ test-suite using-mock-input
                        stm,
                        text >= 0.11.3,
                        utf8-string >= 0.3 && < 1.1,
-                       vector >= 0.7
+                       vector >= 0.11
 
   if flag(curses) && !os(windows)
     build-depends:     unix,
@@ -706,6 +722,7 @@ test-suite config
 
   build-depends:       vty,
                        Cabal >= 1.20,
+                       cabal-test-quickcheck >= 0.1.6,
                        data-default >= 0.5.3,
                        HUnit,
                        QuickCheck >= 2.7,
@@ -724,7 +741,7 @@ test-suite config
                        string-qq,
                        text >= 0.11.3,
                        utf8-string >= 0.3 && < 1.1,
-                       vector >= 0.7
+                       vector >= 0.11
 
   if flag(curses) && !os(windows)
     build-depends:     unix,
