--- a/stack.yaml
+++ b/stack.yaml
@@ -5,5 +5,6 @@ packages:
   extra-dep: true
 - location: dependencies/win32
   extra-dep: true
-extra-deps: []
-resolver: nightly-2015-08-17
+extra-deps:
+- cabal-test-quickcheck-0.1.6
+resolver: nightly-2015-12-01
