--- a/vty.cabal
+++ b/vty.cabal
@@ -519,6 +519,42 @@ test-suite parse-terminfo-caps
   if os(windows)
     build-depends:    Win32 >= 2.3.2.0
 
+test-suite win32
+  default-language:    Haskell2010
+  default-extensions:  ScopedTypeVariables
+
+  type:                detailed-0.9
+
+  hs-source-dirs:      test
+
+  test-module:         VerifyWin32
+
+  other-modules:       Verify
+                       Verify.Graphics.Vty.Output
+
+  build-depends:       vty,
+                       Cabal >= 1.20,
+                       cabal-test-quickcheck >= 0.1.6,
+                       QuickCheck >= 2.7,
+                       random >= 1.0 && < 1.2,
+                       base >= 4 && < 5,
+                       bytestring,
+                       containers,
+                       deepseq >= 1.1 && < 1.5,
+                       mtl >= 1.1.1.0 && < 2.3,
+                       text >= 0.11.3,
+                       utf8-string >= 0.3 && < 1.1,
+                       vector >= 0.11
+
+  if flag(curses) && !os(windows)
+    build-depends:     unix,
+                       terminfo >= 0.3 && < 0.5
+    cpp-options:       -DPOSIX -DTERMINFO
+
+  if os(windows)
+    build-depends:    Win32 >= 2.3.2.0
+    cpp-options:       -DWINDOWS
+
 test-suite simple-span-generation
   default-language:    Haskell2010
   default-extensions:  ScopedTypeVariables
