--- a/vty.cabal
+++ b/vty.cabal
@@ -43,6 +43,10 @@ data-files:          README.md,
                      LICENSE
 tested-with:         GHC >= 7.6.2
 
+source-repository head
+  type: git
+  location: https://github.com/coreyoconnor/vty.git
+
 library
   default-language:    Haskell2010
   build-depends:       base >= 4 && < 5,
@@ -113,9 +117,9 @@ library
   default-extensions:  ScopedTypeVariables
                        ForeignFunctionInterface
 
-  ghc-options:         -O2 -funbox-strict-fields -threaded -Wall -fspec-constr -fspec-constr-count=10
+  ghc-options:         -O2 -funbox-strict-fields -Wall -fspec-constr -fspec-constr-count=10
 
-  ghc-prof-options:    -O2 -funbox-strict-fields -threaded -caf-all -Wall -fspec-constr -fspec-constr-count=10
+  ghc-prof-options:    -O2 -funbox-strict-fields -caf-all -Wall -fspec-constr -fspec-constr-count=10
 
   cc-options:          -O2
 
