--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ env:
  - CABALVER=1.20 GHCVER=7.6.3
  - CABALVER=1.20 GHCVER=7.8.3
  - CABALVER=1.22 GHCVER=7.10.1
+ - CABALVER=1.24 GHCVER=8.0.1
  - CABALVER=head GHCVER=head
 
 install:
