Mouse: factor control sequence parser out into its own module

--- a/vty.cabal
+++ b/vty.cabal
@@ -95,6 +95,7 @@ library
                        Graphics.Vty.Image.Internal
                        Graphics.Vty.Input.Classify
                        Graphics.Vty.Input.Classify.Types
+                       Graphics.Vty.Input.Classify.Parse
                        Graphics.Vty.Input.Loop
                        Graphics.Vty.Input.Mouse
                        Graphics.Vty.Input.Terminfo
