--- a/vty.cabal
+++ b/vty.cabal
@@ -129,6 +129,21 @@ library
 
   cc-options:          -O2
 
+executable vty-mode-demo
+  main-is:             ModeDemo.hs
+
+  default-language:    Haskell2010
+  default-extensions:  ScopedTypeVariables
+  ghc-options:         -threaded
+
+  build-depends:       vty,
+                       base >= 4 && < 5,
+                       containers,
+                       data-default >= 0.5.3,
+                       microlens,
+                       microlens-mtl,
+                       mtl >= 1.1.1.0 && < 2.3
+
 executable vty-demo
   main-is:             Demo.hs
 
