--- a/vty.cabal
+++ b/vty.cabal
@@ -1,5 +1,5 @@
 name:                vty
-version:             5.11.3
+version:             5.12
 license:             BSD3
 license-file:        LICENSE
 author:              AUTHORS
@@ -116,7 +116,10 @@ library
                        cbits/set_term_timing.c
                        cbits/mk_wcwidth.c
 
-  include-dirs:        cbits
+  extra-libraries:     utf8proc
+
+  include-dirs:        cbits /usr/local/include
+  extra-lib-dirs:      /usr/local/lib
 
   hs-source-dirs:      src
 
