--- a/vty.cabal
+++ b/vty.cabal
@@ -40,7 +40,13 @@ data-files:          README.md,
                      TODO,
                      AUTHORS,
                      CHANGELOG,
-                     LICENSE
+                     LICENSE,
+                     cbits/utf8proc/utf8proc_data.c
+                     cbits/utf8proc/utf8proc.h
+                     cbits/utf8proc/LICENSE.md
+                     cbits/utf8proc/README.md
+                     cbits/utf8proc/COMMIT
+
 tested-with:         GHC >= 7.6.2
 
 source-repository head
@@ -115,11 +121,10 @@ library
   c-sources:           cbits/gwinsz.c
                        cbits/set_term_timing.c
                        cbits/mk_wcwidth.c
+                       cbits/utf8proc/utf8proc.c
 
-  extra-libraries:     utf8proc
-
-  include-dirs:        cbits /usr/local/include
-  extra-lib-dirs:      /usr/local/lib
+  include-dirs:        cbits
+                       cbits/utf8proc
 
   hs-source-dirs:      src
 
