--- a/vty.cabal
+++ b/vty.cabal
@@ -30,7 +30,7 @@ extra-doc-files:     README.md,
                      AUTHORS,
                      CHANGELOG.md,
                      LICENSE
-tested-with:         GHC==7.10.3, GHC==8.0.2, GHC==8.2.2, GHC==8.4.3
+tested-with:         GHC==7.10.3, GHC==8.0.2, GHC==8.2.2, GHC==8.4.3, GHC==8.6.5
 
 source-repository head
   type: git
@@ -62,7 +62,8 @@ library
                        vector >= 0.7
 
   if !impl(ghc >= 8.0)
-    build-depends:     semigroups >= 0.16
+    build-depends:     semigroups >= 0.16,
+                       fail
 
   exposed-modules:     Graphics.Vty
                        Graphics.Vty.Attributes
