--- a/vty.cabal
+++ b/vty.cabal
@@ -149,6 +149,19 @@ executable vty-demo
                        microlens-mtl,
                        mtl >= 1.1.1.0 && < 2.3
 
+executable vty-emoji-demo
+  main-is:             EmojiDemo.hs
+  hs-source-dirs:      demos
+
+  default-language:    Haskell2010
+  default-extensions:  ScopedTypeVariables
+  ghc-options:         -threaded
+
+  build-depends:       vty,
+                       base >= 4.8 && < 5,
+                       containers,
+                       mtl >= 1.1.1.0 && < 2.3
+
 test-suite verify-using-mock-terminal
   default-language:    Haskell2010
   default-extensions:  ScopedTypeVariables
