Add wcwidth tester executable
This executable goes through the Unicode code-points and figures out how
many columns each character takes in the terminal. The result is written
at "output.txt".

--- a/unicode_tools/Makefile
+++ b/unicode_tools/Makefile
@@ -27,5 +27,5 @@ clean:
 	rm -f *.o \
 		gen_wide wide.h \
 		gen_nonspacing nonspacing.h \
-		gen_emoji emoji.h \
-		gen_extended_pictographic extended_pictographic.h
+		gen_emoji \
+		gen_extended_pictographic
