Specify pkg-config `tinfo` requirement

--- a/vty.cabal
+++ b/vty.cabal
@@ -109,6 +109,8 @@ library
                        cbits/mk_wcwidth.c
 
   include-dirs:        cbits
+  
+  pkgconfig-depends:   tinfo
 
   hs-source-dirs:      src
 
