--- a/vty.cabal
+++ b/vty.cabal
@@ -106,6 +106,7 @@ library
 
   c-sources:           cbits/gwinsz.c
                        cbits/set_term_timing.c
+                       cbits/get_tty_erase.c
                        cbits/mk_wcwidth.c
 
   include-dirs:        cbits
