--- a/vty.cabal
+++ b/vty.cabal
@@ -104,6 +104,7 @@ library
                        Graphics.Vty.UnicodeWidthTable.Types
                        Graphics.Vty.UnicodeWidthTable.IO
                        Graphics.Vty.UnicodeWidthTable.Query
+                       Graphics.Vty.UnicodeWidthTable.Install
 
   other-modules:       Graphics.Vty.Attributes.Color240
                        Graphics.Vty.Debug.Image
@@ -130,7 +131,7 @@ executable vty-build-table
   hs-source-dirs:      tools
 
   default-language:    Haskell2010
-  ghc-options:         -threaded
+  ghc-options:         -threaded -Wall
 
   build-depends:       vty,
                        base >= 4.8 && < 5
