--- a/.travis.yml
+++ b/.travis.yml
@@ -96,7 +96,7 @@ script:
 
   # build & run tests, build benchmarks
   - cabal new-build -w ${HC} ${TEST} ${BENCH} all
-  - if [ "x$TEST" = "x--enable-tests" ]; then cabal new-test -w ${HC} ${TEST} ${BENCH} all; fi
+  - if [ "x$TEST" = "x--enable-tests" ]; then cabal new-test -w ${HC} ${TEST} --disable-shared ${BENCH} all; fi
 
   # haddock
   - rm -rf ./dist-newstyle
