--- a/vty.cabal
+++ b/vty.cabal
@@ -130,6 +130,9 @@ executable vty-build-width-table
   default-language:    Haskell2010
   ghc-options:         -threaded -Wall
 
+  if !impl(ghc >= 8.0)
+    build-depends:     semigroups >= 0.16
+
   build-depends:       vty,
                        directory,
                        filepath,
